tests/ui/endpoint/dynamic_schema_wrong_type.stderr
error[E0631]: type mismatch in function arguments
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:21
   |
8  | fn schema(_: u16) -> String {
   | --------------------------- found signature defined here
...
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                     ^^^^^^^^ expected due to this
   |
   = note: expected function signature `fn(StatusCode) -> _`
              found function signature `fn(u16) -> _`
note: required by a bound in `invoke`
  --> src/lib.rs
   |
   |         F: FnOnce(T) -> U
   |            ^^^^^^^^^^^^^^ required by this bound in `invoke`

error[E0308]: mismatched types
  --> tests/ui/endpoint/dynamic_schema_wrong_type.rs:16:46
   |
16 | #[read_all(schema = "schema", status_codes = "status_codes")]
   |                                              ^^^^^^^^^^^^^^
   |                                              |
   |                                              expected struct `StatusCode`, found `u16`
   |                                              expected due to this
   |
   = note: expected struct `Vec<StatusCode>`
              found struct `Vec<u16>`
